apps/keycloak/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - accounts.auraenterprise.solutions
    - admin-accounts.auraenterprise.solutions
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: keycloak.apps-prod.svc.cluster.local
            port:
              number: 8080
